refactor: Response 객체 리턴하도록 변경