@@ -6,14 +6,14 @@ import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import kitchenpos.application.dto.TableGroupCreateRequest;
+import kitchenpos.application.dto.TableGroupResponse;
 import kitchenpos.domain.Order;
+import kitchenpos.domain.OrderLineItem;
 import kitchenpos.domain.OrderStatus;
 import kitchenpos.domain.OrderTable;
-import kitchenpos.domain.OrderTables;
 import kitchenpos.domain.TableGroup;
 import kitchenpos.repository.OrderTableRepository;
 import kitchenpos.repository.TableGroupRepository;
@@ -41,32 +41,29 @@ class TableGroupServiceTest {
     void create() {
         // given
         final List<OrderTable> orderTables = List.of(
-            new OrderTable(1L, 2, true, Collections.emptyList(), null),
-            new OrderTable(2L, 2, true, Collections.emptyList(), null)
+            new OrderTable(1L, 2, true, Collections.emptyList()),
+            new OrderTable(2L, 2, true, Collections.emptyList())
         );
 
-        given(orderTableRepository.getAllById(any()))
-            .willReturn(new OrderTables(orderTables));
+        final TableGroup tableGroup = new TableGroup(1L, orderTables);
 
+        given(orderTableRepository.getAllById(any()))
+            .willReturn(orderTables);
         given(tableGroupRepository.save(any()))
-            .willReturn(new TableGroup(1L, orderTables));
+            .willReturn(tableGroup);
 
         // when
-        final TableGroup savedTableGroup = tableGroupService.create(new TableGroupCreateRequest(List.of(1L, 2L)));
+        final TableGroupResponse savedTableGroup = tableGroupService.create(
+            new TableGroupCreateRequest(List.of(1L, 2L)));
 
         // then
-        assertThat(savedTableGroup.getId()).isEqualTo(1L);
+        assertThat(savedTableGroup.getId()).isEqualTo(tableGroup.getId());
     }
 
     @DisplayName("테이블 그룹의 테이블이 비어있으면 예외가 발생한다.")
     @Test
     void create_failEmptyTables() {
         // given
-        given(orderTableRepository.findAllById(any()))
-            .willReturn(Collections.emptyList());
-        given(orderTableRepository.getAllById(any()))
-            .willCallRealMethod();
-
         // when
         // then
         assertThatThrownBy(() -> tableGroupService.create(new TableGroupCreateRequest(Collections.emptyList())))
@@ -78,9 +75,9 @@ class TableGroupServiceTest {
     void create_failOneTable() {
         // given
         given(orderTableRepository.getAllById(any()))
-            .willReturn(new OrderTables(List.of(
-                new OrderTable(1L, 2, true, Collections.emptyList(), null)
-            )));
+            .willReturn(List.of(
+                new OrderTable(1L, 2, true, Collections.emptyList())
+            ));
 
         // when
         // then
@@ -92,9 +89,9 @@ class TableGroupServiceTest {
     @Test
     void create_failDifferentSize() {
         // given
-        given(orderTableRepository.findByTableGroup(any()))
+        given(orderTableRepository.getAllById(any()))
             .willReturn(List.of(
-                new OrderTable(1L, 2, true, Collections.emptyList(), null)
+                new OrderTable(1L, 2, true, Collections.emptyList())
             ));
 
         // when
@@ -108,14 +105,12 @@ class TableGroupServiceTest {
     void create_failNotEmptyTable() {
         // given
         final List<OrderTable> orderTables = List.of(
-            new OrderTable(1L, 2, false, Collections.emptyList(), null),
-            new OrderTable(2L, 2, true, Collections.emptyList(), null)
+            new OrderTable(1L, 2, false, Collections.emptyList()),
+            new OrderTable(2L, 2, true, Collections.emptyList())
         );
-        final TableGroup tableGroup = TableGroup.forSave(orderTables);
+
         given(orderTableRepository.getAllById(any()))
-            .willReturn(new OrderTables(orderTables));
-        given(tableGroupRepository.save(any()))
-            .willReturn(tableGroup);
+            .willReturn(orderTables);
 
         // when
         // then
@@ -127,14 +122,6 @@ class TableGroupServiceTest {
     @Test
     void create_failNotEmptyGroupId() {
         // given
-        final List<OrderTable> orderTables = List.of(
-            new OrderTable(1L, 2, false, Collections.emptyList(), new TableGroup(1L, new ArrayList<>())),
-            new OrderTable(2L, 2, true, Collections.emptyList(), null)
-        );
-
-        given(orderTableRepository.getByTableGroup(any(TableGroup.class)))
-            .willReturn(new OrderTables(orderTables));
-
         // when
         // then
         assertThatThrownBy(() -> tableGroupService.create(new TableGroupCreateRequest(List.of(1L, 2L))))
@@ -146,8 +133,8 @@ class TableGroupServiceTest {
     void ungroup() {
         // given
         final List<OrderTable> orderTables = List.of(
-            new OrderTable(1L, 2, false, Collections.emptyList(), null),
-            new OrderTable(2L, 2, false, Collections.emptyList(), null)
+            new OrderTable(1L, 2, true, Collections.emptyList()),
+            new OrderTable(2L, 2, true, Collections.emptyList())
         );
         final TableGroup tableGroup = new TableGroup(1L, orderTables);
 
@@ -166,14 +153,17 @@ class TableGroupServiceTest {
     void ungroup_failNotOrderEnd() {
         // given
         final List<OrderTable> orderTables = List.of(
-            new OrderTable(1L, 2, false, List.of(new Order(1L, OrderStatus.COOKING, Collections.emptyList())), null),
-            new OrderTable(2L, 2, false, Collections.emptyList(), null)
+            new OrderTable(1L, 2, false, List.of(new Order(1L, OrderStatus.COOKING,
+                                                           List.of(new OrderLineItem(1L, 1L, null))))),
+            new OrderTable(2L, 2, false, List.of(new Order(1L, OrderStatus.COOKING,
+                                                           List.of(new OrderLineItem(1L, 1L, null)))))
         );
         final TableGroup tableGroup = new TableGroup(1L, orderTables);
+
         given(tableGroupRepository.getById(any()))
             .willReturn(tableGroup);
-        given(orderTableRepository.getByTableGroup(tableGroup))
-            .willReturn(new OrderTables(orderTables));
+        given(orderTableRepository.findByTableGroup(tableGroup))
+            .willReturn(orderTables);
 
         // when
         // then
